--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,16 @@
  *= require_tree .
  *= require_self
  */
+
+ 
+ .image {
+    border-radius: 50%;
+}
+
+img {
+   border-radius: 50%;
+}
+
+.notifications:not(:last-child){
+   margin-bottom: 0;
+}
