--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,27 +1,22 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Posts</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Content</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @posts.each do |post| %>
-      <tr>
-        <td><%= post.content %></td>
-        <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Post', new_post_path %>
+<section class="section">
+  <div class="container">
+    <div class="columns">
+      <p id="notice"><%= notice %></p>
+      <h1>Community</h1>
+      <table>
+        <%# if user_signed_in? %>
+        <div class="card-body">
+          <p class="image is-64x64">
+            <img src="https://bulma.io/images/placeholders/64x64.png" style="border-radius: 50%">
+          </p>
+          <h5 class="card-title"><%#= current_user.name%></h5>
+          <h6 class="card-subtitle mb-2 text-muted">@<%#= current_user.username %></h6>
+          <%= render "posts/form"%>
+        </div>
+        <%# end%>
+        <br>
+        <%= render "posts/feed"%>
+      </table>
+    </div>
+  </div>
+</section>
