--- a/app/views/pages/_header.html.erb
+++ b/app/views/pages/_header.html.erb
@@ -7,7 +7,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" aria-current="posts/" href="/pages/community">Community</a>
+          <a class="nav-link" aria-current="pages" href="/posts">Community</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/games">Store</a>
@@ -15,21 +15,21 @@
         <li class="nav-item">
           <a class="nav-link" href="/pages/profile">Profile</a>
         </li>
-        <%# if user_signed_in? %>
-        <%# <li class="nav-item">
-          <a class="nav-link"><%= link_to "Sign Out", destroy_user_session_path, method: :delete %><%#</a>
-        </li> %>
-        <li class="nav-item">
-          <a class="nav-link" href="/users/edit">Edit Profile</a>
-        </li>
-        <%# else %>
-        <li class="nav-item">
-          <a class="nav-link" href="/users/sign_up">Sign Up</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/users/sign_in">Sign In</a>
-        </li>
-        <%# end %>
+        <% if user_signed_in? %>
+          <li class="nav-item">
+            <a class="nav-link"><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/users/edit">Edit Profile</a>
+          </li>
+        <% else %>
+          <li class="nav-item">
+            <a class="nav-link" href="/users/sign_up">Sign Up</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/users/sign_in">Sign In</a>
+          </li>
+        <% end %>
         <form class="d-flex">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success search" type="submit" style="visibility: hidden">Search</button>
