--- a/app/views/posts/_feed.html.erb
+++ b/app/views/posts/_feed.html.erb
@@ -7,20 +7,20 @@
             <p class="image is-64x64">
               <img src="https://bulma.io/images/placeholders/64x64.png" style="border-radius: 50%">
             </p>
-            <h5 class="card-title"><%#= post.user.name%></h5>
-            <h6 class="card-subtitle mb-2 text-muted">@<%#= post.user.username %></h6>
+            <h5 class="card-title"><%= post.user.name%></h5>
+            <h6 class="card-subtitle mb-2 text-muted">@<%= post.user.username %></h6>
             <p class="card-text"><%= post.content %></p>
           </div>
         </div>
-        <%#if user_signed_in? && current_user.id == post.user_id %>
-        <nav class="level">
-          <div class="level-left is-mobile">
-            <%= link_to 'Edit', edit_post_path(post), class: "btn btn-dark btn-secondary btn-sm" %>
-            <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure you want to delete this post??' }, 
+        <%if user_signed_in? && current_user.id == post.user_id %>
+          <nav class="level">
+            <div class="level-left is-mobile">
+              <%= link_to 'Edit', edit_post_path(post), class: "btn btn-dark btn-secondary btn-sm" %>
+              <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure you want to delete this post??' }, 
             class: "btn btn-dark btn-secondary btn-sm"  %>
-          </div>
-        </nav>
-        <%# end %>
+            </div>
+          </nav>
+        <% end %>
       <%end%>
     </figure>
   </article>
