--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,14 +1,12 @@
-
-<%= simple_form_for(@game) do |f| %>
+<%= simple_form_for(@item) do |f| %>
   <%= f.error_notification %>
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
-
   <div class="form-inputs">
     <%= f.input :title %>
     <%= f.input :description %>
-    <%= f.input :creator_id %>
+    <%= f.input :author %>
+    <% user_id = current_user.id %>
   </div>
-
   <div class="form-actions">
     <%= f.button :submit %>
   </div>
