--- a/app/views/pages/_header.html.erb
+++ b/app/views/pages/_header.html.erb
@@ -9,12 +9,12 @@
         <li class="nav-item">
           <a class="nav-link" aria-current="pages" href="/posts">Community</a>
         </li>
-        <%# <li class="nav-item">
-          <a class="nav-link" href="/items">Store</a>
-        </li> %>
-        <%# <li class="nav-item">
+        <li class="nav-item">
+          <a class="nav-link" href="/games">Store</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="/pages/profile">Profile</a>
-        </li> %>
+        </li>
         <% if user_signed_in? %>
           <li class="nav-item">
             <a class="nav-link"><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></a>
