--- a/app/views/games/edit.html.erb
+++ b/app/views/games/edit.html.erb
@@ -1,6 +1,4 @@
 <h1>Editing Game</h1>
-
 <%= render 'form', game: @game %>
-
-<%= link_to 'Show', @game %> |
-<%= link_to 'Back', games_path %>
+<%= link_to 'Show', @game, class:"btn btn-dark" %> |
+<%= link_to 'Back', games_path, class:"btn btn-dark" %>
