--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,23 +1,30 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Games</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Creator</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
+<div class="container">
+  <h1>Games</h1>
+  <style>
+    td {
+      text-align: center;
+    }
+  </style>
+  <table>
+    <thead>
+      <tr>
+        <th>Image</th>
+        <th>Name</th>
+        <th>Rating</th>
+        <th>Released at</th>
+        <th>Price</th>
+        <th colspan="3"></th>
+      </tr>
+    </thead>
+  </div>
   <tbody>
     <% @games.each do |game| %>
       <tr>
-        <td><%= game.title %></td>
-        <td><%= game.description %></td>
-        <td><%= game.creator_id %></td>
+        <td><img src=<%= game.image %> style="width:200px;height:auto;"></td>
+        <td><%= game.name %></td>
+        <td><%= game.rating %></td>
+        <td><%= game.created_at %></td>
+        <td class="price"><%= game.price %></td>
         <td><%= link_to 'Show', game %></td>
         <td><%= link_to 'Edit', edit_game_path(game) %></td>
         <td><%= link_to 'Destroy', game, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -25,7 +32,5 @@
     <% end %>
   </tbody>
 </table>
-
 <br>
-
-<%= link_to 'New Game', new_game_path %>
+<%= link_to 'New Game' , new_game_path, class:"btn btn-dark" %>
