--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,5 +1,3 @@
-<h1>New Game</h1>
-
+<h1>Create New Game</h1>
 <%= render 'form', game: @game %>
-
-<%= link_to 'Back', games_path %>
+<%= link_to 'Back', games_path,class:"btn btn-dark" %>
