--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,19 +1,25 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Title:</strong>
-  <%= @game.title %>
-</p>
-
-<p>
-  <strong>Description:</strong>
-  <%= @game.description %>
-</p>
-
-<p>
-  <strong>Creator:</strong>
-  <%= @game.creator_id %>
-</p>
-
-<%= link_to 'Edit', edit_game_path(@game) %> |
-<%= link_to 'Back', games_path %>
+<div class="card" style="width: 75%; margin: 0 auto; background-color: #999966; text-align: center;">
+  <div class="card-body">
+    <h5 class="card-title"><%= @game.name %></h5>
+    <p>
+      <img src=<%= @game.image %>>
+    </p>
+    <p>
+      <strong>Description:</strong>
+      <%= @game.description %>
+    </p>
+    <p>
+      <strong>Rating:</strong>
+      <%= @game.rating %>
+    </p>
+    <p>
+      <strong>Price:</strong>
+      <div class="price">
+        <%= @game.price %>
+      </div>
+    </p>
+    <%= link_to 'Edit', edit_game_path(@game), class:"btn btn-dark" %> |
+    <%= link_to 'Back', games_path, class:"btn btn-dark" %>
+  </div>
+</div>
+<script></script>
